--- a/css/style.css
+++ b/css/style.css
@@ -339,7 +339,7 @@ nav {
 		margin: -6px 0 0 0;
 	}
 #wenku {
-	background: url(../images/文库.jpg) no-repeat 2px 0%;
+	background: url(../images/百度文库.jpg) no-repeat 2px 0%;
 	padding: 42px 0 0 0;
 	line-height: 1.2em;
 	letter-spacing: -1px;
